<resources>
    <string name="app_name">COFEPA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_new_user_name">Student Name</string>
    <string name="hint_new_email">Email</string>
    <string name="hint_new_password">Password</string>
    <string name="hint_new_confirm_password">Confirm Password</string>
    <string name="hint_new_department">Department</string>
    <string name="hint_new_phone_number">Phone Number</string>
    <string name="hint_user_name">Student Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_up">Register</string>
    <string name="button_sign_in">Login</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_new_account">Create New Account</string>
    <string name="text_login_instead">Login Instead</string>
    <string name="text_enter_email_for_password_reset">Enter your registered email to reset password</string>
    <string name="title_activity_landing">Landing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_make_payment">Make Payment</string>
    <string name="menu_verify_payment">Verify Payment</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_utilities">Utilities</string>

    <string name="items_to_pay">Items To Pay</string>
    <string name="amount_due">Amount Due</string>
    <string name="paying_total">Paying Total</string>

    <string name="verify_yes">Verify</string>
    <string name="verify_no"> Please Complete Your Fees First</string>

    <string name="acceptance_fee">Acceptance</string>
    <string name="accommodation_fee">Accommodation</string>
    <string name="exam_fee">Exams</string>
    <string name="hazard_fee">Hazard</string>
    <string name="lib_equi_fee">Library and Equipment</string>
    <string name="medic_treat_fee">Medical Treatment</string>
    <string name="psa_fee">PSA</string>
    <string name="portal_fee">Portal</string>
    <string name="security_fee">Security</string>
    <string name="sports_fee">Sports</string>
    <string name="tuition_fee">Tuition</string>

    <string name="custom_dialog_title">Confirm Fees Pay</string>
    <string name="custom_edit_button">Edit</string>
    <string name="custom_confirm_button">Confirm</string>
    <string name="copy">Copy</string>
    <string name="copy_instruction">Copy this code for verficiation</string>
    <string name="department_select">Select Department</string>
    <string name="level_select">Select Level</string>


    <string-array name="departments">
        <item>Accounting</item>
        <item>ComputerScience</item>
        <item>Economics</item>
        <item>MassCommunication</item>
    </string-array>

    <string-array name="levels">
        <item>100L</item>
        <item>200L</item>
        <item>300L</item>
        <item>400L</item>
    </string-array>


</resources>