<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_sign_up"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_person_add_24"
        android:layout_gravity="center_horizontal" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/cv_sign_up"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:hint="@string/hint_new_user_name"
            android:id="@+id/et_new_user_name"
            android:inputType="text"
            android:drawableStart="@drawable/ic_baseline_person_outline_24" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:hint="@string/hint_new_email"
            android:id="@+id/et_new_email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_email_24" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="@string/hint_new_password"
                    android:id="@+id/et_new_password"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_baseline_lock_24" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_new_confirm_password"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:id="@+id/et_new_confirm_password"
                    android:inputType="textPassword"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_dept"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/purple_500">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_tv_dept"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="none"
                    android:layout_margin="8dp"
                    android:hint="@string/department_select" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_level"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/purple_500">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_tv_level"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="none"
                    android:layout_margin="8dp"
                    android:hint="@string/level_select" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <Spinner-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:spinnerMode="dialog"-->
<!--                android:padding="15dp"-->
<!--                android:id="@+id/spinner_department"/>-->

<!--            <Spinner-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:spinnerMode="dialog"-->
<!--                android:padding="15dp"-->
<!--                android:id="@+id/spinner_level"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    app:ccp_countryPreference="NG,US"
                    app:ccp_defaultPhoneCode="234"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:hint="@string/hint_new_phone_number"
                    android:id="@+id/et_new_phone_number"
                    android:inputType="phone"
                    android:maxLength="10"/>
            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_sign_up" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login_instead"
        android:id="@+id/tv_login_instead"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="4dp"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/pb_sign_up"
        android:visibility="invisible"/>

</RelativeLayout>


