<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_title"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="24dp"
        android:id="@+id/custom_text_title"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/green"/>

        <View
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/crimson" />

    </LinearLayout>

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="16sp"-->
<!--        android:textColor="@color/black"-->
<!--        android:padding="4dp"-->
<!--        android:layout_margin="8dp"-->
<!--        android:id="@+id/txt_fee"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_confirm_items"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_total_confirm"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text="@string/custom_edit_button"
            android:backgroundTint="@color/crimson"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/btn_pre_pay_edit"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text="@string/custom_confirm_button"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/btn_pre_pay_confirm"/>

    </LinearLayout>
</LinearLayout>